.metadata/.plugins/org.eclipse.cdt.ui/Blynking.build.log
16:37:22 **** Incremental Build of configuration Debug for project Blynking ****
make all 
Building file: D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_Program.c
Invoking: Cross ARM GNU C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DOS_USE_SEMIHOSTING -DTRACE -DOS_USE_TRACE_SEMIHOSTING_DEBUG -DSTM32F401xC -DUSE_HAL_DRIVER -DHSE_VALUE=25000000 -I"../include" -I"../system/include" -I"../system/include/cmsis" -I"../system/include/stm32f4-hal" -std=gnu11 -MMD -MP -MF"src/RCC_Program.d" -MT"src/RCC_Program.d" -c -o "src/RCC_Program.o" "D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_Program.c"
In file included from D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_Program.c:6:0:
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:17:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:18:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:19:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:22:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:23:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:24:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:27:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:28:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:29:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:32:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:33:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:34:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:37:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:38:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:39:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:42:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:43:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:44:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:47:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:48:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:49:8: warning: declaration does not declare anything
  u32   ;
        ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_private.h:52:8: warning: declaration does not declare anything
  u32   ;
        ^
In file included from D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_Program.c:2:0:
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_Program.c: In function 'RCC_enablePeripheralClock':
../include/BIT_MATH.h:4:32: error: lvalue required as left operand of assignment
 #define SET_BIT(reg,bit)    reg|=(1<<bit)
                                ^
D:/engineering/Arm IMT/project/02-MCAL/01-RCC/RCC_Program.c:37:4: note: in expansion of macro 'SET_BIT'
    SET_BIT(AHB,0);
    ^~~~~~~
make: *** [src/subdir.mk:52: src/RCC_Program.o] Error 1

16:37:23 Build Finished (took 342ms)

